Fixed footer 1:s text overflow

--- a/navStyle.css
+++ b/navStyle.css
@@ -153,6 +153,12 @@ text-align: center;
 
     }
 
+    @media only screen and (max-width: 770px) {
+
+footer li:first-of-type a{
+        line-height: 3vh;
+    }
+    }
 
     @media only screen and (min-width: 900px) {
 
